--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 altair==4.2.0
 matplotlib==3.5.1
 numpy==1.22.4
+openpyxl==3.0.10
 pandas==1.4.2
 plotly==5.6.0
 python_dateutil==2.8.2
 streamlit==1.11.0
+streamlit_option_menu==0.3.2
